# partysys

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_RU.md  config.py  config.toml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: build.yml  build_push.yml  deploy.yml
cogs/: controller.py  healthcheck.py  scheduler.py  slash_commands.py  voice.py
migrations/models/: 0_20240803152426_init.py
services/: __init__.py  adv.py  base_classes.py  bot_class.py  embeds.py  errors.py  modals.py  server_temp_voices.py  temp_voice.py  views.py
source/: base_classes.py  bot_class.py  channel_class.py  embeds.py  errors.py  modals.py  server_class.py  views.py
src/: models.py
src/cogs/: controller.py  scheduler.py  slash_commands.py  temp_voice_commands.py  voice.py
src/services/: __init__.py  base.py  base_classes.py  bot_class.py  errors.py  server.py  server_temp_voices.py  temp_voice.py
src/ui/: __init__.py  adv.py  base.py  control.py  embeds.py  modals.py  views.py
src/utils/: __init__.py  abc.py  enums.py
tests/: test_server.py
