[tool.poetry]
name = "partysys"
version = "0.1.0"
description = ""
authors = ["FolkiDevv folkidevv.ru"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.2"
sentry-sdk = "^1.39.2"
cryptography = "^42.0.1"
loguru = "^0.7.2"
pyright = "^1.1.369"
tortoise-orm = {extras = ["asyncmy"], version = "^0.21.3"}
aerich = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
ruff-lsp = "^0.0.53"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 80
exclude = [
    ".idea",
    ".github",
    ".venv",
    "migrations"
]

[tool.ruff.lint]
extend-select = [
    "E",  #    pycodestyle errors
    "W",  #    pycodestyle warnings
    "N",  #    pep8-naming
    "F",  #    pyflakes
    "I",  #    isort
    "B",  #    flake8-bugbear
    "C4", #    flake8-comprehensions
    "UP", #    pyupgrade
    "ASYNC", # flake8-async
    "T20", #   flake8-print
    "RUF", #   ruff-specified
    "SIM", #   flake8-simplify
    "C901" #   Cyclomatic compexity
]
extend-ignore = [
    "RUF001" # ambiguous-unicode-character-string
]


[tool.aerich]
tortoise_orm = "config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
